--- a/projects/11-newsletter-section/package.json
+++ b/projects/11-newsletter-section/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "dayjs": "^1.11.12",
     "gitmoji-cli": "^9.4.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
