--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,10 @@ jobs:
         # 跑測試並產生測試報告
 
       - name: Upload test results to GitHub Actions
-        uses: actions/upload-test-results@v2
+        uses: actions/upload-artifact@v2
+        # 使用upload-artifact@v2 而不是 upload-test-results@v2
         with:
+          name: test-results
           path: test-results.xml
         # 直接把測試結果上傳到GitHub Actions
 
