--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+
+      - name: Change to project directory
+        run: cd projects/08-pricing-section-single
           
       - name: Install dependencies
         run: npm ci
