由於monorepo所以切換目錄試看看

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,17 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          
-      - name: Install dependencies
-        run: npm ci
+
+      - name: Change to project directory
+        run: cd projects/08-pricing-section-single
+        # 因為monorepo的關係必須切換資料夾
 
       - name: Display package.json content
         run: cat package.json
-        #確認
+        # 確認package.json內容
+          
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run tests
         run: npm run test -- --reporter=junit --outputFile=test-results.xml
