Finally get npm workspace-monorepo working. This is a example/try for 20-marketing-landing-page: Import 02-blog-card.

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "projects/*"
   ],
   "scripts": {
     "dev": "cd packages/web-app && npm run dev",
     "test:pricing": "cd projects/08-pricing-section-single && npm run test"
-  }
+  },
+  "packageManager": "npm@10.0.0"
 }
