--- a/projects/06-features-section-side-image/package.json
+++ b/projects/06-features-section-side-image/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "@repo/06-features-section-side-image",
   "private": true,
   "version": "0.0.0",
   "type": "module",
