--- a/projects/07-features-section-grid/package.json
+++ b/projects/07-features-section-grid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "@repo/07-features-section-grid",
   "private": true,
   "version": "0.0.0",
   "type": "module",
