--- a/projects/05-hero-section-bullets/package.json
+++ b/projects/05-hero-section-bullets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "@repo/05-hero-section-bullets",
   "private": true,
   "version": "0.0.0",
   "type": "module",
