--- a/projects/08-pricing-section-single/package.json
+++ b/projects/08-pricing-section-single/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "@repo/08-pricing-section-single",
   "private": true,
   "version": "0.0.0",
   "type": "module",
