--- a/projects/09-pricing-section-tiers/package.json
+++ b/projects/09-pricing-section-tiers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "@repo/09-pricing-section-tiers",
   "private": true,
   "version": "0.0.0",
   "type": "module",
