--- a/projects/17-logo-marquee-section/package.json
+++ b/projects/17-logo-marquee-section/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "@repo/17-logo-marquee-section",
   "private": true,
   "version": "0.0.0",
   "type": "module",
