--- a/package.json
+++ b/package.json
@@ -7,7 +7,25 @@
   ],
   "scripts": {
     "dev": "cd packages/web-app && npm run dev",
-    "test:pricing": "cd projects/08-pricing-section-single && npm run test"
+    "test:pricing": "cd projects/08-pricing-section-single && npm run test",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
-  "packageManager": "npm@10.0.0"
+  "packageManager": "npm@10.0.0",
+  "devDependencies": {
+    "@chromatic-com/storybook": "^1.9.0",
+    "@storybook/addon-essentials": "^8.3.6",
+    "@storybook/addon-interactions": "^8.3.6",
+    "@storybook/addon-links": "^8.3.6",
+    "@storybook/addon-onboarding": "^8.3.6",
+    "@storybook/blocks": "^8.3.6",
+    "@storybook/react": "^8.3.6",
+    "@storybook/react-vite": "^8.3.6",
+    "@storybook/test": "^8.3.6",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "prop-types": "^15.8.1",
+    "storybook": "^8.3.6",
+    "tailwindcss": "^3.4.14"
+  }
 }
