--- a/projects/Toggle/package.json
+++ b/projects/Toggle/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "-",
+  "name": "@repo/toggle",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^2.1.10",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
